# ClipForge

./: .claudeignore  .env.example  AUDIO_CRACKLING_FIX_FINAL.md  AUDIO_DIAGNOSTIC_GUIDE.md  AUDIO_FIX_SUMMARY.md  AUDIO_SETUP_GUIDE.md  CLIPFORGE_README.md  ClipForge.md  DEBUG_LOGS.md  DIAGNOSTIC_INTEGRATION.md  DRAG_DROP_FEATURES.md  MEMORY_BANK.md  MERGE_FIX_SUMMARY.md  SYNC_DIAGNOSTIC_GUIDE.md  SYNC_FIX_SUMMARY.md  TEXT_OVERLAY_IMPLEMENTATION.md  analyze-audio.sh  diagnose-hardware-audio.sh  index.html  package-lock.json  package.json  test-audio-comparison.sh  test-audio-fix.sh  test-buffer-config.sh  test-final-optimization.sh  test-mono-stereo.sh  test-sample-rates.sh  test-wallclock-diagnostic.sh
.memory/: audio-crackling-fix.md  improvements.md
.memory_bank/: README.md
docs/: transcript-timeline-highlighting.md
src/: App.css  App.jsx  TimelineContext.jsx  index.css
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/video_player/: mod.rs
src-tauri/swift-helper/: ScreenRecorder  ScreenRecorder.swift
src/components/: AudioRecordingTestPanel.css  AudioRecordingTestPanel.jsx  AudioSettingsModal.css  AudioSettingsModal.jsx  MediaLibrary.jsx  RecordingControls.css  RecordingControls.jsx  SyncDiagnosticsPanel.css  SyncDiagnosticsPanel.jsx  TextOverlayEditor.css  TextOverlayEditor.jsx  Timeline.css  Timeline.jsx  TranscriptPanel.jsx  TrimControls.css  TrimControls.jsx  VideoPlayer.css  VideoPlayer.jsx
src/utils/: syncDiagnostics.js  timelineUtils.js
